tests/results/deadlock_analysis_results/test_force_advanced_parallel_log.txt
Test: test_force_advanced_parallel
File: test_force_advanced_parallel.py
Status: error
Execution time: 0.34s
Exit code: 1
Timestamp: 2025-06-02 01:37:05.185980

Deadlock indicators:

STDOUT:


STDERR:
Traceback (most recent call last):
  File "C:\Users\User\Documents\cursor_projects\poker_knight\test_force_advanced_parallel.py", line 95, in <module>
    test_force_advanced_parallel()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\User\Documents\cursor_projects\poker_knight\test_force_advanced_parallel.py", line 16, in test_force_advanced_parallel
    print("\U0001f680 Testing Forced Advanced Parallel Processing")
    ~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python313\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\U0001f680' in position 0: character maps to <undefined>

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\User\Documents\cursor_projects\poker_knight\test_force_advanced_parallel.py", line 98, in <module>
    print(f"\u274c Test failed with error: {e}")
    ~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python313\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u274c' in position 0: character maps to <undefined>

